# ZkDocLock

./: .gitignore  Move.toml
sources/: zkdoclock.move
tests/: zkdoclock_tests.move
zkdoclock-app/: .gitignore  package-lock.json  package.json
zkdoclock-app/src/: App.tsx  constants.ts  main.circom  main.tsx
zkdoclock-app/src/main_js/: main.wasm
zkdoclock-app/src/zkproof/: Cargo.toml
zkdoclock-app/src/zkproof/src/: main.circom  main.rs
zkdoclock-app/src/zkproof/src/main_c_cpp/: main_c.cpp
