[package]
name = "zkproof"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5"
rand = "0.9.1"
hex = "0.4.3"
ark-std = "0.5.0"
num-bigint = "0.4"
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }